[gd_scene load_steps=7 format=2]

[ext_resource path="res://GlassBreaker.gd" type="Script" id=1]
[ext_resource path="res://assets/interact/broken glasse/break glass0.png" type="Texture" id=2]
[ext_resource path="res://assets/interact/broken glasse/break glass1.png" type="Texture" id=3]
[ext_resource path="res://assets/interact/broken glasse/broken_glass0.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "activated",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "broken",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="GlassBreaker" type="Node2D"]
script = ExtResource( 1 )

[node name="GlassBreaker" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="GlassBreaker"]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GlassBreaker"]
position = Vector2( 0, 128 )
shape = SubResource( 2 )

[connection signal="body_entered" from="GlassBreaker" to="." method="_on_GlassBreaker_body_entered"]
[connection signal="body_exited" from="GlassBreaker" to="." method="_on_GlassBreaker_body_exited"]
